--- a/app/src/main/res/layout/fragment_business_account.xml
+++ b/app/src/main/res/layout/fragment_business_account.xml
@@ -66,6 +66,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/_11sdp"
                         android:fontFamily="@font/opensans_bold"
+                        android:text="0.00"
                         android:textColor="@color/price"
                         android:textSize="@dimen/_30ssp" />
 
@@ -89,34 +90,37 @@
         </RelativeLayout>
 
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/recentTokenTextLL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/cvHeader"
         android:layout_marginStart="@dimen/_21sdp"
         android:layout_marginTop="@dimen/_11sdp"
         android:layout_marginEnd="@dimen/_10sdp"
         android:layout_marginBottom="@dimen/_8sdp"
-        android:layout_below="@id/cvHeader"
         android:orientation="horizontal">
+
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/opensans_bold"
             android:layout_weight="0.8"
+            android:fontFamily="@font/opensans_bold"
             android:text="@string/recent_token_transactions"
             android:textColor="@color/primary_green"
             android:textSize="@dimen/_12ssp" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/opensans_regular"
-            android:textSize="@dimen/_10ssp"
-            android:layout_weight="0.2"
-            android:textColor="@color/primary_black"
-            android:gravity="end"
             android:layout_marginEnd="@dimen/_10sdp"
-            android:text="(CYN)"/>
+            android:layout_weight="0.2"
+            android:fontFamily="@font/opensans_regular"
+            android:gravity="end"
+            android:text="(CYN)"
+            android:textColor="@color/primary_black"
+            android:textSize="@dimen/_10ssp" />
     </LinearLayout>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
@@ -150,6 +154,7 @@
                     android:layout_height="match_parent"
                     android:layout_alignParentBottom="true"
                     android:orientation="vertical">
+
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
