--- a/app/src/main/res/layout/add_new_business_account_alert_dialog.xml
+++ b/app/src/main/res/layout/add_new_business_account_alert_dialog.xml
@@ -9,6 +9,7 @@
     android:background="@drawable/roundeddialog"
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -34,6 +35,16 @@
         android:textColor="@color/primary_black"
         android:textSize="@dimen/_12ssp" />
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:scrollbars="none"
+        android:layout_height="match_parent">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_company_list"
         android:layout_width="match_parent"
@@ -45,6 +56,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvAction"
+        android:layout_gravity="bottom"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_44sdp"
         android:layout_marginTop="@dimen/_40sdp"
@@ -61,7 +73,12 @@
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="@dimen/_12ssp" />
+
     </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
+
+    </ScrollView>
 
     <View
         android:layout_width="match_parent"
