--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -40,7 +40,7 @@
                         android:id="@+id/iv_user_icon_CV"
                         android:layout_width="@dimen/_48sdp"
                         android:layout_height="@dimen/_48sdp"
-                        android:background="@color/white"
+                        app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="@dimen/_24sdp">
 
                         <ImageView
@@ -58,7 +58,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
+                            android:layout_gravity="center"
                             android:fontFamily="@font/opensans_bold"
+                            android:text="TT"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_20sdp"
                             android:visibility="gone" />
@@ -80,13 +82,42 @@
                     android:textColor="@color/black"
                     android:textSize="@dimen/_11ssp" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:scaleType="fitEnd"
-                    android:src="@drawable/ic_notifications" />
+                <RelativeLayout
+                    android:id="@+id/notificationsRL"
+                    android:layout_width="@dimen/_30sdp"
+                    android:layout_height="@dimen/_30sdp"
+                    android:layout_gravity="center">
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/countCV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginEnd="@dimen/_5sdp"
+                        android:visibility="gone"
+                        app:cardBackgroundColor="@color/primary_green"
+                        app:cardCornerRadius="@dimen/_10sdp">
+
+                        <TextView
+                            android:id="@+id/countTV"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginLeft="@dimen/_3sdp"
+                            android:layout_marginRight="@dimen/_3sdp"
+                            android:fontFamily="@font/opensans_semibold"
+                            android:text="0"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/_8ssp" />
+                    </androidx.cardview.widget.CardView>
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_notifications" />
+
+                </RelativeLayout>
+
             </LinearLayout>
 
         </LinearLayout>
