--- a/app/src/main/res/layout/activity_team_member.xml
+++ b/app/src/main/res/layout/activity_team_member.xml
@@ -26,7 +26,8 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_back" />
+                android:src="@drawable/ic_back"
+                android:contentDescription="Back Button"/>
         </LinearLayout>
 
         <TextView
@@ -276,6 +277,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
+                            android:contentDescription="Screen Navigation"
                             android:src="@drawable/ic_rightarrow" />
                     </LinearLayout>
 
@@ -308,6 +310,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="@dimen/_20sdp"
+                        android:contentDescription="change"
                         android:src="@drawable/ic_icon_awesome_pen" />
 
                     <TextView
