--- a/app/src/main/res/layout/activity_dbainfo_details.xml
+++ b/app/src/main/res/layout/activity_dbainfo_details.xml
@@ -213,6 +213,7 @@
 
 
                     <LinearLayout
+                        android:id="@+id/editEmailDBALL"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
@@ -257,6 +258,7 @@
                         android:background="@color/light_gray" />
 
                     <LinearLayout
+                        android:id="@+id/editPhoneNumDBALL"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
